105: Quantity.negate()
Task-Url: https://github.com/unitsofmeasurement/unit-api/issues/issues/105